Revert "fix: make CI workflows more resilient with continue-on-error"
This reverts commit 2c7f6c615214e00b94aa414a40f5103c1fea2c70.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,18 +99,15 @@ jobs:
       run: npm ci
       
     - name: Lint markdown
-      run: npm run lint || echo "Markdown linting issues found - not failing build"
-      continue-on-error: true
+      run: npm run lint
       
     - name: Spell check
-      run: npm run spell || echo "Spell check issues found - not failing build"
-      continue-on-error: true
+      run: npm run spell
       
     - name: Run validation scripts
       run: |
         chmod +x scripts/*.sh
-        ./scripts/run-all-validations.sh || echo "Validation script issues found - not failing build"
-      continue-on-error: true
+        ./scripts/run-all-validations.sh
 
   validate-costs:
     runs-on: ubuntu-latest
@@ -126,19 +123,15 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy pandas pyyaml
+        pip install numpy pandas
         
-    - name: Make scripts executable
+    - name: Validate cost calculations
       run: |
-        chmod +x scripts/validate-*.sh
+        make validate-costs
         
-    - name: Validate cost calculations in documentation
+    - name: Test cost calculations
       run: |
-        echo "🔍 Validating cost calculations in documentation..."
-        ./scripts/validate-model-names.sh docs/11-cost-optimization.md || echo "Model validation issues found"
-        ./scripts/validate-namespaces.sh docs/11-cost-optimization.md || echo "Namespace validation issues found"  
-        ./scripts/validate-resource-specs.sh docs/11-cost-optimization.md || echo "Resource spec validation issues found"
-      continue-on-error: true
+        make test-costs
 
   security-scan:
     runs-on: ubuntu-latest
@@ -152,5 +145,4 @@ jobs:
         inputs: requirements-test.txt
         
     - name: Run npm audit
-      run: npm audit --audit-level=moderate || echo "npm audit found vulnerabilities - not failing build"
-      continue-on-error: true
+      run: npm audit --audit-level=moderate
